# walltheme

./: Cargo.toml  README.md  build.rs
scripts/examples/: imports.nu  restart_waybar.sh  select_wallpaper_with_wofi.nu
src/: config.rs  constants.rs  helper.rs  lib.rs  main.rs  theme.rs
templates/: colors  colors-alacritty.toml  colors-hypr.conf  colors-kitty.conf  colors-oh-my-posh.json  colors-waybar.css  colors-zellij.kdl  colors.lua  colors.nu  colors.sh
walltheme-config/: Cargo.toml
walltheme-config/src/: lib.rs
