[package]
name = "walltheme"
version = "0.1.0"
edition = "2021"

[dependencies]
color-thief = "0.2.2"
dirs = "5.0.1"
handlebars = "6.2.0"
image = "0.25.5"
lazy_static = "1.5.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
termion = "4.0.3"
toml = "0.8.19"
walkdir = "2.5.0"

[build-dependencies]
toml = "0.8.19"
serde = "1.0.216"
serde_json = "1.0.133"
